<resources>
    <string name="app_name">LabsCM20171</string>
    <string name="activity_PersonalInfo">Información Personal</string>
    <string name="name">Nombres</string>
    <string name="lastName">Apellidos</string>
    <string name="sex">Sexo:</string>
    <string name="scholarship">Grado de Escolaridad</string>
    <string name="next">Siguiente</string>
    <string name="activity_ContactInfo">Información de Contacto</string>
    <string name="numberContact">Teléfono</string>
    <string name="email">Correo Electrónico</string>
    <string name="country">País</string>
    <string name="cityName">Ciudad</string>
    <string name="direction">Direccion</string>
    <string name="info_comple">Información Complementaría</string>
    <string name="pasatiempos">Pasatiempos:</string>
    <string name="mostrar">Mostrar</string>
    <string name="activity_OtherInfo">Información Complementaria</string>
    <string name="date">Fecha de Nacimiento:</string>
    <string-array name="grados">
        <item>Primaria</item>
        <item>Secundaria</item>
        <item>Universiad</item>
        <item>Otro</item>
    </string-array>
</resources>
