<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="co.edu.udea.compumovil.gr08_20171.lab1.PersonalInfo"
    android:weightSum="1">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="@dimen/elevation_toolbar"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        tools:ignore="UnusedAttribute"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
    <LinearLayout
        android:id="@+id/linearLayoutNames"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/img_names"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:paddingRight="16dp"
            android:src="@drawable/names" />
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_names"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/form_margin_top"
            android:hint="@string/name"
            app:hintTextAppearance="@style/AppTheme.FloatingLabel">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences|textNoSuggestions"
                android:nextFocusDown="@+id/editTextLastNames"
                android:theme="@style/AppTheme.EditText"/>

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/img_last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:paddingRight="16dp"
            android:src="@drawable/last_names" />
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_last_names"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/form_margin_top"
            android:hint="@string/lastName"
            app:hintTextAppearance="@style/AppTheme.FloatingLabel">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etApellidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences|textNoSuggestions"
                android:theme="@style/AppTheme.EditText"/>

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutSex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/img_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:paddingRight="16dp"
            android:src="@drawable/sex" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/form_margin_top"
            android:hint="@string/lastName"
            app:hintTextAppearance="@style/AppTheme.FloatingLabel"
            android:paddingTop="30dp">

            <TextView
                android:id="@+id/textViewSex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sex"
                android:gravity="bottom"
                android:paddingBottom="10dp"
                android:paddingRight="30dp"
                android:textSize="@dimen/size_text"/>
        </android.support.design.widget.TextInputLayout>
        <RadioGroup
            android:id="@+id/radioGroupSex"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="bottom|left"
            android:paddingBottom="7dp"
            >
            <RadioButton
                android:id="@+id/radioButtonMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hombre"
                />
            <RadioButton
                android:id="@+id/radioButtonFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mujer"
                />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/img_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:paddingRight="16dp"
            android:src="@drawable/calendar" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/form_margin_top"
            android:hint="@string/lastName"
            app:hintTextAppearance="@style/AppTheme.FloatingLabel"
            android:paddingTop="30dp">

            <TextView
                android:id="@+id/FechaNaci"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:gravity="bottom"
                android:paddingBottom="10dp"
                android:paddingRight="10dp"
                android:textSize="@dimen/size_text"/>

            <TextView
                android:id="@+id/tvFechaNaci"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:paddingBottom="10dp"
                android:paddingRight="10dp"
                android:textSize="@dimen/size_text"/>

        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/btnFechaNacimiento"
            android:layout_width="62dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/calendar_plus"
            android:onClick="showDatePickerDialog"
            android:layout_gravity="bottom"/>

    </LinearLayout>



    <LinearLayout
        android:id="@+id/linearLayoutscholarship"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/img_scholarship"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:paddingRight="16dp"
            android:src="@drawable/sex" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_scholarship"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/form_margin_top"
            android:hint="@string/lastName"
            app:hintTextAppearance="@style/AppTheme.FloatingLabel"
            >

            <Spinner
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:textAlignment="center"
                android:id="@+id/spEducacion"
                />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>


        <Button
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/accent"
            android:textColor="@color/letter"
            android:text="@string/next"
            android:id="@+id/btnSiguiente1"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>